# maze-game

./: .gitignore  pyproject.toml
src/: run.py
src/puzzle_platformer/: asgi.py  settings.py  urls.py  wsgi.py
src/puzzle_platformer/static/js/: game.js  maze.js  player.js  utilities.js
src/puzzle_platformer/static/templates/: index.html
src/puzzle_platformer/views/: index.py
