[tool.poetry]
name = "puzzle-platformer"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel@danielpgleason.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
